manifests/uptimekuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitor
spec:
  selector:
    app.kubernetes.io/name: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  type: ClusterIP
